# pyHWT

./: .gitignore  pyproject.toml  setup.py
src/hwt/: __init__.py
src/hwt/cfuncs/: bin.c  bin.pyx  ensemble.c  ensemble.pyx  initiation_detection.c  initiation_detection.pyx  miscfuncs.c  miscfuncs.pyx  neighborhood.c  neighborhood.pyx  objects.c  objects.pyx  smoothers.c  smoothers.pyx  verification.c  verification.pyx
src/hwt/plot/: ctables.py  funcs.py
